# CTU-FIT-MasterThesis

code/: CMakeLists.txt  common.h  main.c
code/plugins/dns/: dns.c  dns.h
code/plugins/icmp/: client-functions.c  client-functions.h  client-handlers.c  client-handlers.h  client.c  client.h  common.h  icmp.c  icmp.h  packet.c  packet.h  server-functions.c  server-functions.h  server-handlers.c  server-handlers.h
code/plugins/sctp/: client-functions.c  client-functions.h  client-handlers.c  client-handlers.h  packet.c  packet.h  sctp.c  sctp.h  server-functions.c  server-functions.h  server-handlers.c  server-handlers.h
code/plugins/tcp/: client-functions.c  client-functions.h  client-handlers.c  client-handlers.h  packet.c  packet.h  server-functions.c  server-functions.h  server-handlers.c  server-handlers.h  tcp.c  tcp.h
code/plugins/udp/: client-functions.c  client-functions.h  client-handlers.c  client-handlers.h  packet.c  packet.h  server-functions.c  server-functions.h  server-handlers.c  server-handlers.h  udp.c  udp.h
code/src/: auth.c  auth.h  common.h  keyfile.c  keyfile.h  main.c  mux.c  mux.h  plugin-parser.c  plugin-parser.h  resolve.c  resolve.h  tun-device.c  tun-device.h
thesis/: .gitignore  DP_Cernac_Martin_2018.tex  DP_Priklad.tex  FITthesis.cls  bp.bib  literatura.bib
thesis/attachments/: communication_schema.xcf  dns_iterative.xcf  dns_recursive.xcf
